--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<ul>
+    <li>Item One</li>
+    <li>Item Two</li>
+    <li>Item Three</li>
+</ul>
 <div id="app"></div>
 <script src="out/main.js" type="text/javascript"></script>
 </body>
